--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
     "sequelize": "^5.21.5"
   }
 }
