commiting all passport related files, including html, routes, model

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Search for COVID-19 testing sites in NJ, NY, and PA",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -- watch server.js"
+
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,17 @@
   },
   "homepage": "https://github.com/WarriorofZarona/covid19-test-site-finder#readme",
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
+    "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
