added new dependencies to package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon -- watch server.js"
-
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,7 @@
   },
   "homepage": "https://github.com/WarriorofZarona/covid19-test-site-finder#readme",
   "dependencies": {
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
