--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Search for COVID-19 testing sites in NJ, NY, and PA",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon -- watch server.js"
+    "start": "node server.js",
+    "dev": "nodemon -- watch server.js"
   },
   "repository": {
     "type": "git",
